--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -35,6 +35,8 @@ jobs:
         with:
           source: ./
           destination: ./_site
+      - name: Copy docs to build directory
+        run: cp -r docs/* _site/
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
 
